build/log/idf_py_stdout_output_12096
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Work\Varroc\ESP-ASM-fresh\build\bootloader\esp-idf\esptool_py && D:\Work\Varroc\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe D:/Work/Varroc/ESP-IDF/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Work/Varroc/ESP-ASM-fresh/build/bootloader/bootloader.bin"
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/asm330lhh_cda.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/asm330lhh_cda.c.obj 
ccache D:\Work\Varroc\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Work/Varroc/ESP-ASM-fresh/build/config -ID:/Work/Varroc/ESP-IDF/components/newlib/platform_include -ID:/Work/Varroc/ESP-IDF/components/freertos/config/include -ID:/Work/Varroc/ESP-IDF/components/freertos/config/include/freertos -ID:/Work/Varroc/ESP-IDF/components/freertos/config/xtensa/include -ID:/Work/Varroc/ESP-IDF/components/freertos/FreeRTOS-Kernel/include -ID:/Work/Varroc/ESP-IDF/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Work/Varroc/ESP-IDF/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Work/Varroc/ESP-IDF/components/freertos/esp_additions/include -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/include -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/include/soc -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/include/soc/esp32 -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/dma/include -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/ldo/include -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/port/esp32/. -ID:/Work/Varroc/ESP-IDF/components/esp_hw_support/port/esp32/include -ID:/Work/Varroc/ESP-IDF/components/heap/include -ID:/Work/Varroc/ESP-IDF/components/log/include -ID:/Work/Varroc/ESP-IDF/components/soc/include -ID:/Work/Varroc/ESP-IDF/components/soc/esp32 -ID:/Work/Varroc/ESP-IDF/components/soc/esp32/include -ID:/Work/Varroc/ESP-IDF/components/hal/platform_port/include -ID:/Work/Varroc/ESP-IDF/components/hal/esp32/include -ID:/Work/Varroc/ESP-IDF/components/hal/include -ID:/Work/Varroc/ESP-IDF/components/esp_rom/include -ID:/Work/Varroc/ESP-IDF/components/esp_rom/include/esp32 -ID:/Work/Varroc/ESP-IDF/components/esp_rom/esp32 -ID:/Work/Varroc/ESP-IDF/components/esp_common/include -ID:/Work/Varroc/ESP-IDF/components/esp_system/include -ID:/Work/Varroc/ESP-IDF/components/esp_system/port/soc -ID:/Work/Varroc/ESP-IDF/components/esp_system/port/include/private -ID:/Work/Varroc/ESP-IDF/components/xtensa/esp32/include -ID:/Work/Varroc/ESP-IDF/components/xtensa/include -ID:/Work/Varroc/ESP-IDF/components/xtensa/deprecated_include -ID:/Work/Varroc/ESP-IDF/components/lwip/include -ID:/Work/Varroc/ESP-IDF/components/lwip/include/apps -ID:/Work/Varroc/ESP-IDF/components/lwip/include/apps/sntp -ID:/Work/Varroc/ESP-IDF/components/lwip/lwip/src/include -ID:/Work/Varroc/ESP-IDF/components/lwip/port/include -ID:/Work/Varroc/ESP-IDF/components/lwip/port/freertos/include -ID:/Work/Varroc/ESP-IDF/components/lwip/port/esp32xx/include -ID:/Work/Varroc/ESP-IDF/components/lwip/port/esp32xx/include/arch -ID:/Work/Varroc/ESP-IDF/components/lwip/port/esp32xx/include/sys -ID:/Work/Varroc/ESP-IDF/components/esp_timer/include -ID:/Work/Varroc/ESP-IDF/components/esp_wifi/include -ID:/Work/Varroc/ESP-IDF/components/esp_wifi/wifi_apps/include -ID:/Work/Varroc/ESP-IDF/components/esp_wifi/wifi_apps/nan_app/include -ID:/Work/Varroc/ESP-IDF/components/esp_wifi/include/local -ID:/Work/Varroc/ESP-IDF/components/esp_event/include -ID:/Work/Varroc/ESP-IDF/components/esp_phy/include -ID:/Work/Varroc/ESP-IDF/components/esp_phy/esp32/include -ID:/Work/Varroc/ESP-IDF/components/esp_netif/include -ID:/Work/Varroc/ESP-IDF/components/esp_driver_spi/include -ID:/Work/Varroc/ESP-IDF/components/esp_pm/include -ID:/Work/Varroc/ESP-IDF/components/esp_driver_gpio/include -ID:/Work/Varroc/ESP-IDF/components/nvs_flash/include -ID:/Work/Varroc/ESP-IDF/components/spi_flash/include -ID:/Work/Varroc/ESP-IDF/components/esp_partition/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Work/Varroc/ESP-ASM-fresh=. -fmacro-prefix-map=D:/Work/Varroc/ESP-IDF=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/asm330lhh_cda.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\asm330lhh_cda.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/asm330lhh_cda.c.obj -c D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c: In function 'sum_abs_diff':
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c:20:5: error: implicit declaration of function 'printf' [-Werror=implicit-function-declaration]
   20 |     printf(">>>%d %d %d\n", prev_val[0], prev_val[1], prev_val[2]);
      |     ^~~~~~
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c:4:1: note: include '<stdio.h>' or provide a declaration of 'printf'
    3 | #include "asm330lhh_cda.h"
  +++ |+#include <stdio.h>
    4 | 
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c:20:5: warning: incompatible implicit declaration of built-in function 'printf' [-Wbuiltin-declaration-mismatch]
   20 |     printf(">>>%d %d %d\n", prev_val[0], prev_val[1], prev_val[2]);
      |     ^~~~~~
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c:20:5: note: include '<stdio.h>' or provide a declaration of 'printf'
cc1.exe: some warnings being treated as errors
[3/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
D:/Work/Varroc/ESP-ASM-fresh/main/main.c: In function 'app_main':
D:/Work/Varroc/ESP-ASM-fresh/main/main.c:221:25: warning: passing argument 1 of 'sum_abs_diff' from incompatible pointer type [-Wincompatible-pointer-types]
  221 |         if(sum_abs_diff(&val) == 1) {
      |                         ^~~~
      |                         |
      |                         int16_t (*)[3] {aka short int (*)[3]}
In file included from D:/Work/Varroc/ESP-ASM-fresh/main/main.c:11:
D:/Work/Varroc/ESP-ASM-fresh/main/asm330lhh_cda.c:5:27: note: expected 'int16_t *' {aka 'short int *'} but argument is of type 'int16_t (*)[3]' {aka 'short int (*)[3]'}
    5 | int sum_abs_diff(int16_t *new_val) {
      |                  ~~~~~~~~~^~~~~~~
ninja: build stopped: subcommand failed.
